// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup Component should match snapshot with default variant 1`] = `
<div>
  <div
    class="someClassName"
    style="color: red;"
  >
    <button
      aria-checked="false"
      class="button-group__button"
      data-testid="button-group__button0"
    >
      <div
        class="mockClass"
      />
    </button>
    <button
      aria-checked="true"
      class="button-group__button button-group__button--active"
      data-testid="button-group__button1"
    />
    <button
      aria-checked="false"
      class="button-group__button"
      data-testid="button-group__button2"
    />
  </div>
</div>
`;

exports[`ButtonGroup Component should match snapshot with radiogroup variant 1`] = `
<div>
  <div
    class="someClassName radio-button-group"
    role="radiogroup"
    style="color: red;"
  >
    <button
      aria-checked="false"
      class="radio-button-group__button"
      data-testid="button-group__button0"
      role="radio"
    >
      <div
        class="mockClass"
      />
    </button>
    <button
      aria-checked="true"
      class="radio-button-group__button button-group__button--active radio-button-group__button--active"
      data-testid="button-group__button1"
      role="radio"
    />
    <button
      aria-checked="false"
      class="radio-button-group__button"
      data-testid="button-group__button2"
      role="radio"
    />
  </div>
</div>
`;
